--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,10 @@ footer {
 
 footer .footer-social {
     /* Optional: Change size of footer icon */
-    width:24px;
-    margin:.5rem
+    width: 24px;
+    margin: .5rem
 }
+
 .btn-hero {
     display: flex;
     justify-self: center;
@@ -83,6 +84,7 @@ h2 {
 p {
     font-family: var(--bs-body-font);
 }
+
 .display-1 {
     /* Optional: Customizes display-1 style based on my Figma UI kit */
     font-weight: 800;
@@ -108,6 +110,7 @@ p {
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+
     /* Optional: Customize responsive style for display-1 on small devices and larger */
     .display-1 {
         font-size: 4rem;
@@ -123,8 +126,19 @@ img {
     /* width: 1320px; */
     margin: 0 auto;
 }
+
 img.self {
     border-radius: 10px;
+}
+
+ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.project-list {
+    columns: 2;
 }
 
 section {
@@ -145,6 +159,7 @@ svg {
 .text-centered {
     text-align: center;
 }
+
 .text-left {
     text-align: left;
 }
@@ -153,17 +168,21 @@ svg {
 .row {
     --gridgap: 2em;
 }
+
 .row2 {
     --gridgap2: 0em;
 }
+
 .row>* {
     margin-top: var(--gridgap);
     margin-bottom: var(--gridgap);
 }
-.row2 + .row2 {
+
+.row2+.row2 {
     margin-top: var(--gridgap2);
     margin-bottom: var(--gridgap2);
 }
+
 @media (min-width: 768px) {
     .row {
         display: grid;
@@ -301,18 +320,24 @@ svg {
     }
 
     /* SWAP (REVERSE) COLUMNS - WORKS ONLY w/ 2 CHILDREN  */
-    .row.swapped > *:first-child { order: 2; }
-    .row.swapped > *:last-child { order: 1; }
+    .row.swapped>*:first-child {
+        order: 2;
+    }
+
+    .row.swapped>*:last-child {
+        order: 1;
+    }
 }
 
 @media (min-width: 768px) {
-.social-links {
-    display: flex;
-    justify-content: end;
-    padding: 5em 0 0 0;
-    
-}}
+    .social-links {
+        display: flex;
+        justify-content: end;
+        padding: 5em 0 0 0;
+
+    }
+}
 
 .card {
---bs-card-border-width: 1px solid white;
+    --bs-card-border-width: 1px solid white;
 }
